# Tarka-AI

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
apps/workers/: .dockerignore  Dockerfile  README.md  package.json  pyproject.toml
apps/workers/app/: config.py  main.py  observability.py
apps/workers/app/jobs/: account_deletion.py  beta_invites.py  contradiction_batch.py  daily_roast.py  data_export.py  drill_sergeant_job.py  eulogy_generator.py  i18n_translate.py  mirror_mode_generator.py  wager_evaluator.py
apps/workers/app/prompts/: anti_sycophant_base.py  breakup_analyzer.py  contradiction.py  cope_detector.py  council.py  daily_roast.py  decision_killer.py  drill_sergeant.py  eulogy.py  fact_extraction.py  future_self.py  (+9 more)
apps/workers/tests/: test_account_deletion.py  test_admin.py  test_beta_invites.py  test_breakup_analyzer.py  test_chat_stream.py  test_contradictions.py  test_cope_detector.py  test_council.py  test_couple_facts.py  test_couples.py  test_daily_roast.py  test_data_export.py  test_decision_killer.py  test_drill_sergeant.py  test_email.py  test_enforcement.py  test_eulogy.py  test_fact_extraction.py  test_future_self.py  test_groups.py  test_i18n_translate.py  test_langfuse_trace.py  test_memory.py  test_mirror.py  test_moderation.py  test_negotiation.py  test_observability.py  test_onboarding.py  test_past_self.py  test_polar_webhooks.py  test_push.py  test_roast_my_x.py  test_safety.py  test_safety_incidents.py  test_steelman.py  test_wager_checkin_nudges.py  test_wager_evaluator.py
(+371 files in other folders)
